--- a/src/box-styles.css
+++ b/src/box-styles.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   justify-content: center;
   text-align: center;
+  font-style: italic;
 }
 .box--large {
   width: 270px;
